Tests/Conformance/Generated/Term/Case/Case_07.lean
-- Auto-generated by gen_conformance_tests.py — do not edit manually.
import Tests.Conformance.ConformanceUtils
import PlutusCore.UPLC.ScriptEncoding.Basic

namespace Tests.Conformance.Generated.Term.Case.Case_07

open Tests.Conformance

/-- error: Parsing error -/
#guard_msgs in
#conformance_import_uplc term_case_case_07 "../.plutus-conformance/plutus-conformance/test-cases/uplc/evaluation/term/case/case-07/case-07.uplc"

end Tests.Conformance.Generated.Term.Case.Case_07
